Trying to fix header/main/footer spacing

--- a/PetPalaces/pages/static/pages/content/main.css
+++ b/PetPalaces/pages/static/pages/content/main.css
@@ -10,10 +10,6 @@ body {
    background-color: #e3ddcc;
 }
 
-a{
-    margin:0;
-}
-
 header {
    color: #fff;
    background-color: #ffd86d;
@@ -23,10 +19,17 @@ header {
 }
 
 main {
-   padding: 4em;
-   background: #e3ddcc url('../images/LandingPage.svg') no-repeat top;
-   background-size: 100%;
-   height: 100%;
+    padding: 4em;
+    background: #e3ddcc url('../images/LandingPage.svg') no-repeat top;
+    background-size: 100%;
+    height: 90%;
+    font-family: 'Chelsea Market', cursive;
+}
+
+footer{
+    margin: 0;
+    padding: 0;
+    height: 1em;
 }
 
 img {
@@ -44,9 +47,14 @@ figcaption {
    vertical-align: text-top;
 }
 
+page-structure{
+    display: grid;
+    grid-template-rows: 20% auto 5%;
+}
+
 .page-brand {
-   display: flex;
-   margin: 10px;
+    display: flex;
+    margin: 10px;
 }
 
 .page-logo {
@@ -95,6 +103,8 @@ ul li a:hover {
 
 p {
    font-size: 20px;
+   margin: 0;
+   padding: 1em;
 }
 
 .login-signup {
